data/all_generated_tests/raw_wast_tests/br_IncorrectBranchTargetResolution_77.wast
;; 8. Design a sequence of nested blocks and loops with the `br` targeting a label index shared among an outermost block and innermost loops. Ensure the label resolution identifies the correct block across the mixed constructs.

(assert_invalid
  (module
    (func
      (block (block (loop (br 3))))
    )
  )
  "unknown label"
)